# diy-subagent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/resources/templates/: architecture-mapper.json  browser_debugger.json  code-reviewer.json  code_mapper.json  custom-blank.json  delivery-verifier.json  docs-researcher.json  docs_researcher.json  pr_explorer.json  requirements-clarifier.json  reviewer.json  root-cause-debugger.json  ui_fixer.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adapters/agents/: claude.rs  codex.rs  cursor.rs  markdown_yaml.rs  mod.rs  registry.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/agents/: directory.rs  instruction_contract.rs  inventory.rs  mod.rs  model.rs  validation.rs  write_plan.rs
src-tauri/src/domain/ports/: agent_adapter.rs  clock.rs  mod.rs  model_list_fetcher.rs
src-tauri/src/domain/templates/: mod.rs  model.rs
src-tauri/src/dto/: mod.rs
src-tauri/src/infrastructure/: codex_config.rs  inventory_watcher.rs  macos.rs  mod.rs  model_fetcher.rs  paths.rs  source_registry.rs  transaction.rs  write_plan_store.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/src/services/: agents.rs  mod.rs  model_catalog.rs  settings.rs  templates.rs
(+154 files in other folders)
