[package]
name = "diy-subagent"
version = "0.3.0"
description = "A macOS-first manager for authoring and safely installing custom coding subagents"
authors = ["旧絮"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "diy_subagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
hex = "0.4"
notify = "8"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.10"
similar = "2"
tauri = { version = "2.11.5", features = ["tracing"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
toml_edit = { version = "0.23", features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
